<resources>
    <string name="app_name">Org Search</string>
    <string-array name="spSex">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="spSort">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <!-- DUMMY DATA FOR POSTS -->
    <string name="postUsername">NO ONE</string>
    <string name="postText">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="postOrg">NO ORG</string>
    <string name="postTitle">Sample Title</string>
    <string name="postUpvoteCounter">0</string>
    <string name="postDownvoteCounter">0</string>
    <string name="postComment">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string-array name="saUsernames">
        <item>John Doe</item>
        <item>Joan Doe</item>
        <item>Juan Dela Cruz</item>
        <item>Juana  Dela Cruz</item>
        <item>Jean D\'Arc</item>
        <item>Jeanne D\'Arc</item>
    </string-array>
    <string-array name="saOrgs">
        <item>PUP Sintang Pusa</item>
        <item>PUP Sintang Aso</item>
    </string-array>
    <string-array name="saTitle">
        <item>Lorem Ipsum</item>
    </string-array>
    <string-array name="saPosts">
        <item>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Misc. Strings -->
    <string name="profile_picture">Profile Picture</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="student_number">Student Number</string>
    <string name="select_sex">Select Sex…</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="birthdate">Birthdate</string>
    <string name="display_birthdate">Display Birthdate</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="organization">Organization</string>
    <string name="tabs">Tabs</string>
    <string name="no_one">NO ONE</string>
    <string name="no_email">NO EMAIL</string>
    <string name="no_description">NO DESCRIPTION</string>
    <string name="follow">Follow</string>
    <string name="join">Join</string>
    <string name="line">Line</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="log_in_to_org_search">Log in to Org Search</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_up_to_org_search">Sign up to Org Search</string>
    <string name="add_profile_picture">Add Profile Picture</string>
    <string name="agreement">I agree to the Terms of Service of Org Search</string>
    <string name="sign_up">Sign up</string>
    <string name="i_already_have_an_account">I already have an account</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
</resources>