<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/maroon_1"
        tools:context=".view.profiles.EditProfileActivity">

        <LinearLayout
            style="@style/StartupConBot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingVertical="?attr/actionBarSize">

            <ImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:background="@null"
                android:contentDescription="@string/profile_picture"
                app:srcCompat="@drawable/ic_baseline_account_circle_24"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/StartupProfileButton"
                android:id="@+id/btnChangePFP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_profile_picture"/>

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="@string/first_name"
                android:hint="@string/first_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnChangePFP" />

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etMidName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/middle_name"
                android:hint="@string/middle_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/last_name"
                android:hint="@string/last_name"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etMidName" />

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etLastName" />

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <EditText
                style="@style/StartupEditTextField"
                android:id="@+id/etStudentNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:autofillHints="@string/student_number"
                android:hint="@string/student_number"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etPassword" />

            <Spinner
                android:id="@+id/spSex"
                style="@style/StartupSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/select_sex"
                android:spinnerMode="dropdown"
                android:text="@string/app_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etStudentNo" />

            <EditText
                android:id="@+id/etBirth"
                style="@style/StartupEditTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/birthdate"
                android:hint="@string/birthdate"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spSex" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/StartupSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_birthdate"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/StartupPrimaryButton"
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:text="@string/accept"/>

            <androidx.appcompat.widget.AppCompatButton
                style="@style/StartupSecondaryButton"
                android:id="@+id/btnReject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4sp"
                android:text="@string/reject" />

        </LinearLayout>

    </ScrollView>

</layout>