<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conMasthead"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/yellow_1"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <ImageButton
        android:id="@+id/ibEdit"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@null"
        android:layout_marginTop="?attr/actionBarSize"
        android:contentDescription="@string/edit_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_settings_24_maroon"
        app:tint="@color/black" />

    <ImageView
        style="@style/ProfileProfile"
        android:id="@+id/ivProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_groups_2_24"
        app:tint="@color/black" />

    <TextView
        style="@style/ProfileUsername"
        android:id="@+id/tvProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/no_one"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        style="@style/ProfileEmail"
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/maroon_2"
        android:text="@string/no_email"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        style="@style/ProfileDetails"
        android:id="@+id/tvProfileDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail" />

    <LinearLayout
        android:id="@+id/conDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/ProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join" />

    </LinearLayout>

    <ImageView
        android:id="@+id/drawerIndicator"
        android:layout_width="200sp"
        android:layout_height="23sp"
        android:paddingVertical="10sp"
        app:layout_constraintTop_toBottomOf="@+id/conDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/shape_drawer_indicator"
        android:contentDescription="@string/line" />

</androidx.constraintlayout.widget.ConstraintLayout>