<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llVotes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        style="@style/PostVoteCounter"
        android:id="@+id/tvUpvoteCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/postUpvoteCounter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibUpvote"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageButton
        style="@style/PostButton"
        android:id="@+id/ibUpvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/upvote"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvUpvoteCounter"
        app:srcCompat="@drawable/ic_baseline_thumb_up_off_alt_24" />

    <ImageButton
        style="@style/PostButton"
        android:id="@+id/ibDownvote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/downvote"
        android:background="@null"
        app:layout_constraintTop_toBottomOf="@+id/ibUpvote"
        app:layout_constraintStart_toStartOf="@+id/ibUpvote"
        app:srcCompat="@drawable/ic_baseline_thumb_down_off_alt_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>